--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+astroid==2.3.3
 backcall==0.1.0
 blis==0.4.1
+bson==0.5.8
 certifi==2019.9.11
 chardet==3.0.4
 cymem==2.0.3
 decorator==4.4.1
-Django==2.2.8
+Django==2.2.7
 django-cors-headers==3.2.0
 djangorestframework==3.10.3
 en-core-web-sm==2.2.5
@@ -12,7 +14,10 @@ idna==2.8
 importlib-metadata==0.23
 ipython==7.9.0
 ipython-genutils==0.2.0
+isort==4.3.21
 jedi==0.15.1
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 more-itertools==7.2.0
 murmurhash==1.0.2
 numpy==1.17.4
@@ -25,6 +30,9 @@ preshed==3.0.2
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
 Pygments==2.4.2
+pylint==2.4.4
+pymongo==3.10.1
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
@@ -34,7 +42,9 @@ srsly==0.2.0
 thinc==7.3.1
 tqdm==4.38.0
 traitlets==4.3.3
+typed-ast==1.4.1
 urllib3==1.25.7
 wasabi==0.4.0
 wcwidth==0.1.7
+wrapt==1.11.2
 zipp==0.6.0
